<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".helpers.ImageHelperActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/black"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintHeight_percent="0.47"
        android:id="@+id/ivImage"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/headOp"
        android:text="@string/output"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/headOp"
        app:layout_constraintBottom_toTopOf="@id/btnGallery"
        android:id="@+id/mtvOp"
        android:textSize="14sp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pickFromGallery"
        android:text="@string/pick_gallery"
        app:layout_constraintEnd_toStartOf="@id/btnCamera"
        android:textAllCaps="false"
        android:textSize="13sp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="pickFromCamera"
        android:text="@string/pick_camera"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="13sp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@id/btnGallery"
        app:layout_constraintBottom_toBottomOf="@id/btnGallery" />


</androidx.constraintlayout.widget.ConstraintLayout>